test/interaction/Issue8105.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-info-action "*Error*" "Issue8105.agda:9.3-12: error: [ClashingDefinition] Multiple definitions of foo. Previous definition at Issue8105.agda:6.1-4 when scope checking the declaration foo : Bar" nil)
((last . 3) . (agda2-maybe-goto '("Issue8105.agda" . 223)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
